--- a/Sidebar.html
+++ b/Sidebar.html
@@ -13,7 +13,7 @@
     <hr class="sidebar-divider my-0">
 
     <!-- Nav Item - Dashboard -->
-    <li class="nav-item active">
+    <li class="nav-item">
         <a class="nav-link" href="home.php">
             <i class="fas fa-fw fa-tachometer-alt"></i>
             <span>الرئيسية</span></a>
@@ -65,26 +65,25 @@
 
     <!-- Nav Item - Pages Collapse Menu -->
     <li class="nav-item">
-        <a class="nav-link" href="" 
-            aria-expanded="true" aria-controls="collapsePages">
+        <a class="nav-link" href="">
             <i class="fas fa-fw fa-folder"></i>
-            <b>الاقسام</b>
+            <span>الاقسام</span>
         </a>
        
     </li>
 
     <!-- Nav Item - Charts -->
     <li class="nav-item">
-        <a class="nav-link" href="charts.html">
+        <a class="nav-link" href="Employee.php">
             <i class="fas fa-fw fa-chart-area"></i>
-            <b>الموظفين</b></a>
+            <span>الموظفين</span></a>
     </li>
 
     <!-- Nav Item - Tables -->
     <li class="nav-item">
         <a class="nav-link" href="tables.html">
             <i class="fas fa-fw fa-table"></i>
-            <b>الوظائف</b></a>
+            <span>الوظائف</span></a>
     </li>
 
     <!-- Divider -->
