--- a/Sidebar.html
+++ b/Sidebar.html
@@ -65,7 +65,7 @@
 
     <!-- Nav Item - Pages Collapse Menu -->
     <li class="nav-item">
-        <a class="nav-link" href="">
+        <a class="nav-link" href="department.php">
             <i class="fas fa-fw fa-folder"></i>
             <span>الاقسام</span>
         </a>
