--- a/Sidebar.html
+++ b/Sidebar.html
@@ -81,7 +81,7 @@
 
     <!-- Nav Item - Tables -->
     <li class="nav-item">
-        <a class="nav-link" href="tables.html">
+        <a class="nav-link" href="jop.php">
             <i class="fas fa-fw fa-table"></i>
             <span>الوظائف</span></a>
     </li>
