--- a/Sidebar.html
+++ b/Sidebar.html
@@ -88,6 +88,18 @@
     </li>
 
     <li class="nav-item">
+        <a class="nav-link" href="leave.php">
+            <i class="fas fa-fw fa-table"></i>
+            <span>الاجازات</span></a>
+    </li>
+
+    <li class="nav-item">
+        <a class="nav-link" href="resignation.php">
+            <i class="fas fa-fw fa-table"></i>
+            <span>الاستقالات</span></a>
+    </li>
+
+    <li class="nav-item">
         <a class="nav-link" href="advance.php">
             <i class="fas fa-fw fa-table"></i>
             <span>السلف</span></a>
