--- a/Sidebar.html
+++ b/Sidebar.html
@@ -2,11 +2,11 @@
  <ul class="navbar-nav bg-gradient-success sidebar sidebar-dark accordion" id="accordionSidebar">
 
     <!-- Sidebar - Brand -->
-    <a class="sidebar-brand d-flex align-items-center justify-content-center" href="index.html">
-        <div class="sidebar-brand-icon rotate-n-15">
-            <i class="fas fa-laugh-wink"></i>
+    <a class="sidebar-brand d-flex align-items-center justify-content-center" href="home.php">
+        <div class="sidebar-brand-icon ">
+            <img src="img/Logo.png" alt="logo" srcset="" width="70px" height="70px">
         </div>
-        <div class="sidebar-brand-text mx-3">SB Admin <sup>2</sup></div>
+        <div class="sidebar-brand-text text-success mx-3 span"><b>مدارس الإبداع </b> </div>
     </a>
 
     <!-- Divider -->
