add delete alownce

--- a/Sidebar.html
+++ b/Sidebar.html
@@ -94,6 +94,12 @@
     </li>
 
     <li class="nav-item">
+        <a class="nav-link" href="bonus.php">
+            <i class="fas fa-fw fa-table"></i>
+            <span>العلاوات</span></a>
+    </li>
+
+    <li class="nav-item">
         <a class="nav-link" href="resignation.php">
             <i class="fas fa-fw fa-table"></i>
             <span>الاستقالات</span></a>
